# notevahti

./: .gitignore  CHANGELOG.md  CITATION.cff  NOTICE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  validation_question.md
.github/workflows/: ci.yml
corpus/: MANIFEST.md  free_da.jsonl  free_en.jsonl  free_fi.jsonl  free_is.jsonl  free_nb.jsonl  free_sv.jsonl  manifest.json  semistructured_en.jsonl  structured_en.jsonl
corpus/messy_mdt/: cases.jsonl
corpus/schema/: example_case.fi.json  finetuning_record.example.jsonl  synthetic_case.schema.json
corpus/synthetic_clinical_notes/: README.md  extractions.csv  gold_labels.csv  notes.csv  notes.jsonl  notevahti_synthetic.sqlite  test_cases.csv
corpus/synthetic_mdt_v1/: README.md  manifest.json
corpus/synthetic_mdt_v1/data/: synthetic_mdt_da.jsonl  synthetic_mdt_en.jsonl  synthetic_mdt_fi.jsonl  synthetic_mdt_is.jsonl  synthetic_mdt_nb.jsonl  synthetic_mdt_sv.jsonl
corpus/synthetic_mdt_v1/docs/: annotation_rules.md  field_definitions.md
corpus/synthetic_mdt_v1/scripts/: generate_dataset.py  validate_dataset.py
docs/: release.md  research-framing.md
docs/design/: extractor_rules.md  notevahti.md  pathway.md  stage1_protocol.md  validation_routing.md
docs/extractors/: rule_based_lung_mdt.md
docs/research/: lung_mdt_stage1_protocol.md  notevahti-research-2026-06.md  synthetic_corpus_design.md  synthetic_corpus_generator_prompt.md
scripts/: eval_clinical_notes.py  eval_messy_mdt.py  gen_corpus.py  stage1_report.py
src/notevahti/: __init__.py  agreement.py  audit.py  batch.py  cli.py  extractors.py  independence.py  normalize.py  provenance.py  routing.py  synonyms.py  types.py  validate.py  validity.py
src/notevahti/analytics/: __init__.py  agreement.py  discrimination.py  evidence_pack.py  preregistration.py  registry_yield.py
src/notevahti/corpus/: __init__.py  synthetic.py
src/notevahti/extractors/: __init__.py  base.py  rules.py
tests/: test_agreement.py  test_analytics_agreement.py  test_analytics_discrimination.py  test_audit.py  test_batch_and_corpus.py  test_batch_grouping.py  test_cli.py  test_cli_extract_validate.py  test_evidence_pack.py  test_external_clinical_notes.py  test_extractors.py  test_gen_corpus.py  test_gen_corpus_errors.py  test_independence.py  test_messy_mdt.py  test_no_network.py  test_normalize.py  test_property.py  test_provenance.py  test_provenance_synonyms.py  test_registry_yield.py  test_routing.py  test_routing_audit.py  test_rule_extractor.py  test_rule_extractor_fields.py  test_smoke.py  test_synthetic_corpus_dataset.py  test_synthetic_corpus_model.py  test_types.py  test_validate.py  test_validity.py
tests/fixtures/: rule_extractor_cases.json  synthetic_mdt.json
