[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notevahti"
version = "0.1.0.dev0"
description = "Transparent local-first validation and reference extraction for lung-cancer MDT registry data."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Heidi Helena Andersén" }]
keywords = [
    "clinical-nlp",
    "lung-cancer",
    "mdt",
    "registry",
    "provenance",
    "audit-trail",
    "local-first",
    "quality-indicators",
    "healthcare-ai",
    "reproducible-research",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
# The validation core has NO runtime dependencies: deterministic, offline, model-free.
dependencies = []

[project.optional-dependencies]
# Optional, never imported by the core. Local extractors / models live here.
extractors = []  # e.g. gliner, transformers — added per-adapter, never required by the core
dev = [
    "pytest>=7",
    "mypy>=1.8",
    "ruff>=0.6",
    "hypothesis>=6",
    "pytest-socket>=0.7",
]

[project.urls]
Homepage = "https://github.com/heidihelena/notevahti"
Source = "https://github.com/heidihelena/notevahti"

[project.scripts]
notevahti = "notevahti.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/notevahti"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# --disable-socket enforces the local-first guarantee suite-wide: any test that
# opens a socket fails. Tests that legitimately need one opt back in with the
# @pytest.mark.enable_socket marker.
addopts = "-q --disable-socket"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/notevahti"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "scripts"]
# Imported corpus-generation tooling (long multilingual template strings); kept as-is.
extend-exclude = ["corpus/synthetic_mdt_v1"]

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I import sorting, UP pyupgrade, B bugbear,
# SIM simplify, RUF ruff-specific. Conservative, no churn beyond real issues.
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
# Synthetic-corpus generator: long multilingual clinical-note template strings are data, not code.
"scripts/gen_corpus.py" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# Lineage is a frozen (immutable) dataclass, so it is safe as a default argument value.
extend-immutable-calls = ["notevahti.types.Lineage"]
